add annotations for user and fix teams route in subscription handler
