# api/handler/user.go
@@ -16,6 +16,14 @@ func user(router chi.Router) {
 	router.Get("/settings", getUserSettings)
 }
 
+// @summary Gets the username of the authenticated user if it is available
+// @id get-user-name
+// @tags user
+// @produce json
+// @param x-webauth-user header string false "User session token"
+// @success 200 {object} dto.User "User name fetched successfully"
+// @failure 422 {object} api.ErrorRenderExample "Render error"
+// @router /user [get]
 func getUserName(writer http.ResponseWriter, request *http.Request) {
 	userLogin := middleware.GetLogin(request)
 	if err := render.Render(writer, request, &dto.User{Login: userLogin}); err != nil {
@@ -24,6 +32,15 @@ func getUserName(writer http.ResponseWriter, request *http.Request) {
 	}
 }
 
+// @summary Get the user's contacts and subscriptions
+// @id get-user-settings
+// @tags user
+// @produce json
+// @param x-webauth-user header string false "User session token"
+// @success 200 {object} dto.UserSettings "Settings fetched successfully"
+// @failure 422 {object} api.ErrorRenderExample "Render error"
+// @failure 500 {object} api.ErrorInternalServerExample "Internal server error"
+// @router /user/settings [get]
 func getUserSettings(writer http.ResponseWriter, request *http.Request) {
 	userLogin := middleware.GetLogin(request)
 	userSettings, err := controller.GetUserSettings(database, userLogin)
